2007-01-26  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/ldpc.cpp: Fix to avoid compiler warning

2007-01-26  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/binfile.cpp: Fixed a minor bug, which caused infinite
	loop of itfile_test on Solaris SPARC with GCC 3.4.5

	* itpp/base/mat.h, itpp/base/vec.h, itpp/comm/crc.cpp,
	itpp/comm/crc.h: Added some missing const keywords, as suggested
	in feature request [1644569]. Thanks to Christian for providing a
	patch.

	* itpp/base/binfile.cpp, itpp/base/binfile.h, itpp/base/itfile.h:
	long type replaced with int or int64_t where necessary due to
	portability issues. Fixed assumptions of type sizes in << and >>
	operators replaced with size dependent read_endian() and
	write_endian() templated functions. Minor cosmetic changes.
	
2007-01-25  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac, itpp/base/ittypes.h, itpp/config_msvc.h,
	win32/itpp.vcproj: Improved portability by adding checks for sizes
	of short, int, long and "long long" integer types. Assuming that
	short has always 2 bytes and int has always 4 bytes. Instead of
	long or "long long" types, an int64_t type should be used, which
	has always 8 bytes on both 32- and 64-bit platforms. MSVC++
	project file and configuration header updated accordingly.

2007-01-24  Adam Piatyszek  <ediap@users.sourceforge.net>

	* AUTHORS, doc/local/authors.doc: Added Kumar Appaiah (Debian
	packages maintainer) to the list of authors

	* itpp/base/sort.h: Minor documentation improvements

	* tests/Makefile.am: Added missing "tests/itfile_test_data.it"
	file

	* itpp/base/sources.mk: Added missing "ittp/base/ittypes.h" file

2007-01-23  Adam Piatyszek  <ediap@users.sourceforge.net>

	* configure.ac: IT++ version incremented

2007-01-23  Erik G. Larsson  <erik_g_larsson@users.sourceforge.net>

	* itpp/comm/modulator_nd.cpp: Fixed an incorrect assertion check

2007-01-23  Adam Piatyszek  <ediap@users.sourceforge.net>
